--- a/public/static/index.html
+++ b/public/static/index.html
@@ -36,9 +36,9 @@
 <script type="text/javascript" src="js/script.js"></script>
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  <style type="text/css">.indexbanner{width:100%;height:580px;position:relative}
+  <style type="text/css">.indexbanner{width:100%;height:400px;position:relative}
 .banList{position:absolute;left:50%;margin-left:-960px;height:400px;list-stype-type:none;}
-.banList li{height:580px;opacity:0;position:absolute;transform:scale(0);transition:transform 0.5s ease 0s, opacity 1.5s ease 0s;z-index:1; list-stype-type:none;}
+.banList li{height:400px;opacity:0;position:absolute;transform:scale(0);transition:transform 0.5s ease 0s, opacity 1.5s ease 0s;z-index:1; list-stype-type:none;}
 .banList li.active{opacity:1;transform:scale(1);z-index:2;}
 .fomW{position:absolute;bottom:20px;left:50%;height:20px;z-index:9;width:1000px;margin-left:-500px}
 .jsNav{text-align:center;}
@@ -183,7 +183,8 @@ img{max-width:inherit;}
     <!-- slider 
       ================================================== -->
     <div class="indexbanner"> 
-            <ul class="banList">              
+      <img src="d/file/p/2016-05-20/df821a67cae978b139a8199b2ebc8521.jpg" width="100%" />
+<!--             <ul class="banList">              
 							<li class="active"><a href="grwj/index.html"><img src="d/file/p/2016-05-25/58eed9c143f872f8c2b5df02062c6b65.jpg" /></a></li>
 							<li class="active"><a href="schoolwj/index.html"><img src="d/file/p/2016-05-16/481c1442e4b1c2606f3548f3cef81792.jpg" /></a></li>
 							<li class="active"><a href="wglt/index.html"><img src="d/file/p/2016-05-19/df6dea1a83c8094555912cb8f1da94cb.jpg" /></a></li>
@@ -199,7 +200,7 @@ img{max-width:inherit;}
 			            
      
     </div>
-  </div>
+  </div> -->
 </div>
   
 
