--- a/public/static/index.html
+++ b/public/static/index.html
@@ -36,8 +36,8 @@
 <script type="text/javascript" src="js/script.js"></script>
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  <style type="text/css">.indexbanner{width:100%;height:400px;position:relative}
-.banList{position:absolute;left:50%;margin-left:-960px;height:400px;list-stype-type:none;}
+  <style type="text/css">.indexbanner{width:100%;position:relative;margin-top: -50px;}
+.banList{position:absolute;left:50%;margin-left:-960px;height:580px;list-stype-type:none;}
 .banList li{height:400px;opacity:0;position:absolute;transform:scale(0);transition:transform 0.5s ease 0s, opacity 1.5s ease 0s;z-index:1; list-stype-type:none;}
 .banList li.active{opacity:1;transform:scale(1);z-index:2;}
 .fomW{position:absolute;bottom:20px;left:50%;height:20px;z-index:9;width:1000px;margin-left:-500px}
@@ -66,7 +66,7 @@ img{max-width:inherit;}
 		    ================================================== -->
 		<header class="clearfix">
 			<!-- Static navbar -->
-			<div class="navbar navbar-default navbar-fixed-top">
+			<div class="navbar navbar-default navbar-fixed-top" >
 				<div class="top-line">
 					<div class="container">
 						<p>
@@ -80,7 +80,7 @@ img{max-width:inherit;}
 						</ul>
 					</div>
 				</div>
-				<div class="container">
+				<div class="container" >
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 							<span class="icon-bar"></span>
